--- a/biodata.html
+++ b/biodata.html
@@ -29,7 +29,7 @@
         <ul>
             <li>
                 <b>2020</b>
-                <br>Juara 3 Lomba Esai OSCEAN
+                <br>Juara 3 Lomba Esai OSCEAN blaa
                 <br><span>IAIN Ponorogo </span>
             </li>
             <li>
