--- a/biodata.html
+++ b/biodata.html
@@ -29,12 +29,12 @@
         <ul>
             <li>
                 <b>2020</b>
-                <br>Juara 3 Lomba Esai OSCEAN blaa
+                <br>Juara 3 Lomba Esai OSCEAN blaa 
                 <br><span>IAIN Ponorogo </span>
             </li>
             <li>
                 <b>2019</b>
-                <br>Peserta Prakerin Terbaik 
+                <br>Peserta Prakerin Terbaik Horray
                 <br><span>CV. SIC Yogyakarta</span>
             </li>
             <li>
