--- a/biodata.html
+++ b/biodata.html
@@ -39,7 +39,7 @@
             </li>
             <li>
                 <b>2017</b>
-                <br>Juara 3 Tunggal Remaja Putri
+                <br>Juara 3 
                 <br><span>Kejuaran Bulutangkis Kabupaten Madiun Tahun 2017</span>
 
             </li>
