--- a/biodata.html
+++ b/biodata.html
@@ -11,7 +11,8 @@
     <div class="main">
       <div class="name">
           <h2 style="color: #2E00FF;">
-            Putri Dwi Isabella    
+            Putri Dwi Isabella  <br>
+            uputt  
         </h2>
         <h2 style="font-size: 20px; text-align: left; margin-left: 15%;">Mahasiswa Sistem Informasi</h2>
     </div>
